height added for labels to avoid overlapping input text fields

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -108,7 +108,12 @@ input#register-username {
   height: 30px;
   font-size: 12px;
 }
-
+label {
+  height: 45px;
+}
+label i {
+  height: 25px;
+}
 #login-btn-inner,
 #register-btn-inner {
   background-color: #c89f98;
